made google api key secret

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@ xmlns:tools="http://schemas.android.com/tools">
              "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
         -->
     <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyBRIn6PUtUAlmYY_JmzfbVPWQOFZBF-swQ" />
+        android:name="${MAPS_API_KEY}"
+        android:value="" />
 
     <activity
         android:name=".MapsActivity"
